==> krazatchu/mbed160-stm32f103c8/targets/hal/TARGET_STM/TARGET_STM32F4/spi_api.c <==
#include "mbed_assert.h"
#include "spi_api.h"
#include <math.h>
#include "cmsis.h"
#include "pinmap.h"
#include "PeripheralPins.h"
#include "mbed_error.h"

void spi_init(spi_t *obj, PinName mosi, PinName miso, PinName sclk, PinName ssel)
{
    // Determine the SPI to use
    SPIName spi_mosi = (SPIName)pinmap_peripheral(mosi, PinMap_SPI_MOSI);
    SPIName spi_miso = (SPIName)pinmap_peripheral(miso, PinMap_SPI_MISO);
    SPIName spi_sclk = (SPIName)pinmap_peripheral(sclk, PinMap_SPI_SCLK);
    SPIName spi_ssel = (SPIName)pinmap_peripheral(ssel, PinMap_SPI_SSEL);

    SPIName spi_data = (SPIName)pinmap_merge(spi_mosi, spi_miso);
    SPIName spi_cntl = (SPIName)pinmap_merge(spi_sclk, spi_ssel);

    obj->spi = (SPIName)pinmap_merge(spi_data, spi_cntl);
    MBED_ASSERT(obj->spi != (SPIName)NC);

    // Enable SPI clock
    if (obj->spi == SPI_1) {
        __HAL_RCC_SPI1_CLK_ENABLE();
    }

    if (obj->spi == SPI_2) {
        __HAL_RCC_SPI2_CLK_ENABLE();
    }

    if (obj->spi == SPI_3) {
        __HAL_RCC_SPI3_CLK_ENABLE();
    }

#if defined SPI4_BASE
    if (obj->spi == SPI_4) {
        __HAL_RCC_SPI4_CLK_ENABLE();
    }
#endif

#if defined SPI5_BASE
    if (obj->spi == SPI_5) {
        __HAL_RCC_SPI5_CLK_ENABLE();
    }
#endif

#if defined SPI6_BASE
    if (obj->spi == SPI_6) {
        __HAL_RCC_SPI6_CLK_ENABLE();
    }
#endif

    // Configure the SPI pins
    pinmap_pinout(mosi, PinMap_SPI_MOSI);
    pinmap_pinout(miso, PinMap_SPI_MISO);
    pinmap_pinout(sclk, PinMap_SPI_SCLK);

    // Save new values
    obj->bits = SPI_DATASIZE_8BIT;
    obj->cpol = SPI_POLARITY_LOW;
    obj->cpha = SPI_PHASE_1EDGE;
    obj->br_presc = SPI_BAUDRATEPRESCALER_256;

    obj->pin_miso = miso;
    obj->pin_mosi = mosi;
    obj->pin_sclk = sclk;
    obj->pin_ssel = ssel;

    if (ssel != NC) {
        pinmap_pinout(ssel, PinMap_SPI_SSEL);
    } else {
        obj->nss = SPI_NSS_SOFT;
    }

    init_spi(obj);
}

void spi_format(spi_t *obj, int bits, int mode, int slave)
{
    // Save new values
    if (bits == 16) {
        obj->bits = SPI_DATASIZE_16BIT;
    } else {
        obj->bits = SPI_DATASIZE_8BIT;
    }

    switch (mode) {
        case 0:
            obj->cpol = SPI_POLARITY_LOW;
            obj->cpha = SPI_PHASE_1EDGE;
            break;
        case 1:
            obj->cpol = SPI_POLARITY_LOW;
            obj->cpha = SPI_PHASE_2EDGE;
            break;
        case 2:
            obj->cpol = SPI_POLARITY_HIGH;
            obj->cpha = SPI_PHASE_1EDGE;
            break;
        default:
            obj->cpol = SPI_POLARITY_HIGH;
            obj->cpha = SPI_PHASE_2EDGE;
            break;
    }

    if (obj->nss != SPI_NSS_SOFT) {
        obj->nss = (slave) ? SPI_NSS_HARD_INPUT : SPI_NSS_HARD_OUTPUT;
    }

    obj->mode = (slave) ? SPI_MODE_SLAVE : SPI_MODE_MASTER;

    init_spi(obj);
}

void spi_frequency(spi_t *obj, int hz)
{
#if defined(TARGET_STM32F401RE) || defined(TARGET_STM32F401VC) || defined(TARGET_STM32F407VG)
    // Note: The frequencies are obtained with SPI1 clock = 84 MHz (APB2 clock)
    if (hz < 600000) {
        obj->br_presc = SPI_BAUDRATEPRESCALER_256; // 330 kHz
    } else if ((hz >= 600000) && (hz < 1000000)) {
        obj->br_presc = SPI_BAUDRATEPRESCALER_128; // 656 kHz
    } else if ((hz >= 1000000) && (hz < 2000000)) {
        obj->br_presc = SPI_BAUDRATEPRESCALER_64; // 1.3 MHz
    } else if ((hz >= 2000000) && (hz < 5000000)) {
        obj->br_presc = SPI_BAUDRATEPRESCALER_32; // 2.6 MHz
    } else if ((hz >= 5000000) && (hz < 10000000)) {
        obj->br_presc = SPI_BAUDRATEPRESCALER_16; // 5.25 MHz
    } else if ((hz >= 10000000) && (hz < 21000000)) {
        obj->br_presc = SPI_BAUDRATEPRESCALER_8; // 10.5 MHz
    } else if ((hz >= 21000000) && (hz < 42000000)) {
        obj->br_presc = SPI_BAUDRATEPRESCALER_4; // 21 MHz
    } else { // >= 42000000
        obj->br_presc = SPI_BAUDRATEPRESCALER_2; // 42 MHz
    }
#elif defined(TARGET_STM32F405RG)
    // Note: The frequencies are obtained with SPI1 clock = 48 MHz (APB2 clock)
    if (obj->spi == SPI_1) {
        if (hz < 375000) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_256; // 187.5 kHz
        } else if ((hz >= 375000) && (hz < 750000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_128; // 375 kHz
        } else if ((hz >= 750000) && (hz < 1500000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_64; // 0.75 MHz
        } else if ((hz >= 1500000) && (hz < 3000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_32; // 1.5 MHz
        } else if ((hz >= 3000000) && (hz < 6000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_16; // 3 MHz
        } else if ((hz >= 6000000) && (hz < 12000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_8; // 6 MHz
        } else if ((hz >= 12000000) && (hz < 24000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_4; // 12 MHz
        } else { // >= 24000000
            obj->br_presc = SPI_BAUDRATEPRESCALER_2; // 24 MHz
        }
    // Note: The frequencies are obtained with SPI2/3 clock = 48 MHz (APB1 clock)
    } else if ((obj->spi == SPI_2) || (obj->spi == SPI_3)) {
        if (hz < 375000) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_256; // 187.5 kHz
        } else if ((hz >= 375000) && (hz < 750000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_128; // 375 kHz
        } else if ((hz >= 750000) && (hz < 1500000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_64; // 0.75 MHz
        } else if ((hz >= 1500000) && (hz < 3000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_32; // 1.5 MHz
        } else if ((hz >= 3000000) && (hz < 6000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_16; // 3 MHz
        } else if ((hz >= 6000000) && (hz < 12000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_8; // 6 MHz
        } else if ((hz >= 12000000) && (hz < 24000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_4; // 12 MHz
        } else { // >= 24000000
            obj->br_presc = SPI_BAUDRATEPRESCALER_2; // 24 MHz
        }
    }
#elif defined(TARGET_STM32F411RE) || defined(TARGET_STM32F429ZI)
    // Values depend of PCLK2: 100 MHz
    if ((obj->spi == SPI_1) || (obj->spi == SPI_4) || (obj->spi == SPI_5)) {
        if (hz < 700000) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_256; // 391 kHz
        } else if ((hz >= 700000) && (hz < 1000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_128; // 781 kHz
        } else if ((hz >= 1000000) && (hz < 3000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_64;  // 1.56 MHz
        } else if ((hz >= 3000000) && (hz < 6000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_32;  // 3.13 MHz
        } else if ((hz >= 6000000) && (hz < 12000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_16;  // 6.25 MHz
        } else if ((hz >= 12000000) && (hz < 25000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_8;   // 12.5 MHz
        } else if ((hz >= 25000000) && (hz < 50000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_4;   // 25 MHz
        } else { // >= 50000000
            obj->br_presc = SPI_BAUDRATEPRESCALER_2;   // 50 MHz
        }
    }
    // Values depend of PCLK1: 50 MHz
    if ((obj->spi == SPI_2) || (obj->spi == SPI_3)) {
        if (hz < 400000) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_256; // 195 kHz
        } else if ((hz >= 400000) && (hz < 700000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_128; // 391 kHz
        } else if ((hz >= 700000) && (hz < 1000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_64;  // 781 MHz
        } else if ((hz >= 1000000) && (hz < 3000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_32;  // 1.56 MHz
        } else if ((hz >= 3000000) && (hz < 6000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_16;  // 3.13 MHz
        } else if ((hz >= 6000000) && (hz < 12000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_8;   // 6.25 MHz
        } else if ((hz >= 12000000) && (hz < 25000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_4;   // 12.5 MHz
        } else { // >= 25000000
            obj->br_presc = SPI_BAUDRATEPRESCALER_2;   // 25 MHz
        }
    }
#elif defined(TARGET_STM32F446RE)
    // Values depend of PCLK2: 90 MHz
    if ((obj->spi == SPI_1) || (obj->spi == SPI_4)) {
        if (hz < 700000) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_256; // 352 kHz
        } else if ((hz >= 700000) && (hz < 1000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_128; // 703 kHz
        } else if ((hz >= 1000000) && (hz < 3000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_64;  // 1.41 MHz
        } else if ((hz >= 3000000) && (hz < 5000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_32;  // 2.81 MHz
        } else if ((hz >= 5000000) && (hz < 11000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_16;  // 5.63 MHz
        } else if ((hz >= 11000000) && (hz < 22000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_8;   // 11.25 MHz
        } else if ((hz >= 22000000) && (hz < 45000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_4;   // 22.5 MHz
        } else { // >= 45000000
            obj->br_presc = SPI_BAUDRATEPRESCALER_2;   // 45 MHz
        }
    }
    // Values depend of PCLK1: 45 MHz
    if ((obj->spi == SPI_2) || (obj->spi == SPI_3)) {
        if (hz < 350000) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_256; // 176 kHz
        } else if ((hz >= 350000) && (hz < 700000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_128; // 352 kHz
        } else if ((hz >= 700000) && (hz < 1000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_64;  // 703 kHz
        } else if ((hz >= 1000000) && (hz < 3000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_32;  // 1.41 MHz
        } else if ((hz >= 3000000) && (hz < 5000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_16;  // 2.81 MHz
        } else if ((hz >= 5000000) && (hz < 11000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_8;   // 5.63 MHz
        } else if ((hz >= 11000000) && (hz < 22000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_4;   // 11.25 MHz
        } else { // >= 22000000
            obj->br_presc = SPI_BAUDRATEPRESCALER_2;   // 22.5 MHz
        }
    }
#elif defined(TARGET_STM32F469NI)
    // Values depend of PCLK2: 84 MHz
    if ((obj->spi == SPI_1) || (obj->spi == SPI_4)) {
        if (hz < 600000) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_256; // 328 kHz
        } else if ((hz >= 600000) && (hz < 1000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_128; // 656 kHz
        } else if ((hz >= 1000000) && (hz < 2000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_64;  // 1.31 MHz
        } else if ((hz >= 2000000) && (hz < 5000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_32;  // 2.63 MHz
        } else if ((hz >= 5000000) && (hz < 10000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_16;  // 5.25 MHz
        } else if ((hz >= 10000000) && (hz < 20000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_8;   // 10.5 MHz
        } else if ((hz >= 20000000) && (hz < 40000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_4;   // 21 MHz
        } else { // >= 40000000
            obj->br_presc = SPI_BAUDRATEPRESCALER_2;   // 42 MHz
        }
    }
    // Values depend of PCLK1: 42 MHz
    if ((obj->spi == SPI_2) || (obj->spi == SPI_3)) {
        if (hz < 300000) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_256; // 164 kHz
        } else if ((hz >= 300000) && (hz < 600000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_128; // 328 kHz
        } else if ((hz >= 600000) && (hz < 1000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_64;  // 656 kHz
        } else if ((hz >= 1000000) && (hz < 2000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_32;  // 1.31 MHz
        } else if ((hz >= 2000000) && (hz < 5000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_16;  // 2.63 MHz
        } else if ((hz >= 5000000) && (hz < 10000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_8;   // 5.25 MHz
        } else if ((hz >= 10000000) && (hz < 20000000)) {
            obj->br_presc = SPI_BAUDRATEPRESCALER_4;   // 10.5 MHz
        } else { // >= 20000000
            obj->br_presc = SPI_BAUDRATEPRESCALER_2;   // 21 MHz
        }
    }   
#endif
    init_spi(obj);
}

int spi_master_write(spi_t *obj, int value)
{
    ssp_write(obj, value);
    return ssp_read(obj);
}

int spi_slave_read(spi_t *obj)
{
    SPI_TypeDef *spi = (SPI_TypeDef *)(obj->spi);
    while (!ssp_readable(obj));
    return (int)spi->DR;
}

void spi_slave_write(spi_t *obj, int value)
{
    SPI_TypeDef *spi = (SPI_TypeDef *)(obj->spi);
    while (!ssp_writeable(obj));
    spi->DR = (uint16_t)value;
}
